--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 exitcode = "1.1.2"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.85"
+unwrap_or = "1.0.0"
